[gd_scene load_steps=3 format=2]

[ext_resource path="res://Presets/RFSoda40.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/SelectCar.gd" type="Script" id=2]

[node name="SelectCar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
car_sprite_name = [ "Car001", "Car002", "Car003", "Car004" ]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "Select Car"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 102.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Prev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarSprite" type="Sprite" parent="."]
position = Vector2( 525, 298 )
scale = Vector2( 0.5, 0.5 )

[node name="ChooseThisCar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.99
anchor_right = 0.5
anchor_bottom = 0.99
margin_left = -144.0
margin_top = -51.0001
margin_right = 142.0
margin_bottom = -5.00006
custom_fonts/font = ExtResource( 1 )
text = "Choose This Car"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="ChooseThisCar" to="." method="_on_ChooseThisCar_pressed"]
